slider overflow fixed

--- a/components/SliderFX/styles.module.scss
+++ b/components/SliderFX/styles.module.scss
@@ -4,7 +4,7 @@
 .Slider{
 	padding: 50px 75px;
 	//border: 5px solid $red;
-	overflow: visible;
+	overflow: hidden;
 	//z-index: -1;
 
 	.SlideOutter{
